...
// MARK: -
/// Main public class. You should init with config (ServersListConfigurator) and assign delegate
public class EnvironmentSwitcher {
    
    static var icon: UIImage {
        let bundle = Bundle(for: self)
        guard let img = UIImage(named: "domain", in: bundle, compatibleWith: nil) else {
            
            #if DEBUG
            print("change server icon dont found".i18n)
            #endif
            
            guard let coloredImg = UIImage.colored() else {
...
