...
class EnvironmentService {

    // MARK: variables
    private static let shared = EnvironmentService()
    private(set) var switcher: EnvironmentSwitcher
    
    private let serversList = ["https://prod.com", "https://predprod.com", "http://st.mainDomain.com", "http://dev.mainDomain.com"]
    private(set) var currentServer: String
    
    // MARK: life cycle and init
    @discardableResult
    static func shared(_ app: MainWindowContaner? = nil) -> EnvironmentService {
        if let appInstance = app {
...
