...
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                </label>
                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k0I-q5-nSd">
                    <rect key="frame" x="284" y="41" width="51" height="31"/>
                    <accessibility key="accessibilityConfiguration" identifier="saveSwitch"/>
                    <connections>
                        <action selector="isSaveServerSwitchToggled" destination="-1" eventType="valueChanged" id="aiT-Lo-FI4"/>
                    </connections>
                </switch>
            </subviews>
            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
